Because of a bug introduced when you can have resizable textfields inside  of a fieldset, I disabled having resizable textfields inside of a fieldset.
 Fixed a bug where CAPTCHA's buttons were not showing up correctly.

 Made it so that vertical tabs works, by upping the weight of the module
 in the system table, as well as a few code changes.

--- a/css/arrange_fields.css
+++ b/css/arrange_fields.css
@@ -54,3 +54,7 @@
   padding: 2px;
   min-width: 50px;
 }
+
+.arrange-fields-container #arrange-fields-vertical-tabs {
+  width: 98%;
+}
